# controllers/desigContract.go
@@ -4,6 +4,9 @@ import (
 	"github.com/astaxie/beego"
 	"encoding/json"
 	"CollegeMis/models"
+	"github.com/astaxie/beego/orm"
+	"strconv"
+	"fmt"
 )
 
 type DesignationController struct{
@@ -45,6 +48,60 @@ func(cc *DesignationAllController) Get(){
 	c := designation.GetAllDesignation()
 	cc.Data["json"] = c
 	cc.ServeJSON()
+}
+
+type DesignationDeleteController struct{
+	beego.Controller
+}
+// @Title Delete
+// @Description delete the Designation
+// @Param	Dsid		path 	string	true		"The Dsid you want to delete"
+// @Success 200 {string} delete success!
+// @Failure 403 Dsid is empty
+// @router /:Dsid [delete]
+func (this *DesignationDeleteController) Delete(){
+	o := orm.NewOrm()
+	Dsid, _ := strconv.Atoi(this.Ctx.Input.Param(":Dsid"))
+			DesignationD := &models.Designation{Dsid:Dsid}
+			
+			
+			if num, err := o.Delete(DesignationD); err == nil {
+				fmt.Println(num)
+				fmt.Println(num)
+				this.Data["json"] = "Deleted"
+			}
+	
+		this.ServeJSON()
+
+}
+
+type DesignationEditController struct{
+	beego.Controller
+}
+// @Title Update
+// @Description update the Designation
+// @Param	Dsid		path 	string	true		"The Dsid you want to update"
+// @Param	body		body 	models.Designation	true		"body for Designation content"
+// @Success 200 {Dsid} models.Designation
+// @Failure 403 :Dsid is not int
+// @router /:Dsid [put]
+func (this *DesignationEditController) Put(){
+	o := orm.NewOrm()
+	Dsid,_ := strconv.Atoi(this.Ctx.Input.Param(":Dsid"))
+	var nd models.Designation
+
+	json.Unmarshal(this.Ctx.Input.RequestBody, &nd)
+
+	nn := models.Designation{Dsid: Dsid}
+		if o.Read(&nn) == nil {
+	
+			nn.DesignationName = nd.DesignationName
+				if num, err := o.Update(&nn); err == nil {
+					fmt.Println(num)
+					this.Data["json"] = "Updated"
+				}
+		}
+	this.ServeJSON()	
 }
 
 
@@ -90,6 +147,60 @@ func(cc *ContractTypeAllController) Get(){
 	c := contract.GetAllContract()
 	cc.Data["json"] = c
 	cc.ServeJSON()
+}
+
+type ContractDeleteController struct{
+	beego.Controller
+}
+// @Title Delete
+// @Description delete the ContractType
+// @Param	Cid		path 	string	true		"The Cid you want to delete"
+// @Success 200 {string} delete success!
+// @Failure 403 Cid is empty
+// @router /:Cid [delete]
+func (this *ContractDeleteController) Delete(){
+	o := orm.NewOrm()
+	Cid, _ := strconv.Atoi(this.Ctx.Input.Param(":Cid"))
+			ContractTypeD := &models.ContractType{Cid:Cid}
+			
+			
+			if num, err := o.Delete(ContractTypeD); err == nil {
+				fmt.Println(num)
+				fmt.Println(num)
+				this.Data["json"] = "Deleted"
+			}
+	
+		this.ServeJSON()
+
+}
+
+type ContractEditController struct{
+	beego.Controller
+}
+// @Title Update
+// @Description update the ContractType
+// @Param	Cid		path 	string	true		"The Cid you want to update"
+// @Param	body		body 	models.ContractType	true		"body for BookSection content"
+// @Success 200 {Cid} models.ContractType
+// @Failure 403 :Cid is not int
+// @router /:Cid [put]
+func (this *ContractEditController) Put(){
+	o := orm.NewOrm()
+	Cid,_ := strconv.Atoi(this.Ctx.Input.Param(":Cid"))
+	var nd models.ContractType
+
+	json.Unmarshal(this.Ctx.Input.RequestBody, &nd)
+
+	nn := models.ContractType{Cid: Cid}
+		if o.Read(&nn) == nil {
+	
+			nn.ContractName = nd.ContractName
+				if num, err := o.Update(&nn); err == nil {
+					fmt.Println(num)
+					this.Data["json"] = "Updated"
+				}
+		}
+	this.ServeJSON()	
 }
 
 
@@ -142,4 +253,58 @@ func(cc *DepartmentAllController) Get(){
 	c := dept.GetAllDepartment()
 	cc.Data["json"] = c
 	cc.ServeJSON()
+}
+
+type DepartmentDeleteController struct{
+	beego.Controller
+}
+// @Title Delete
+// @Description delete the Department
+// @Param	Depid		path 	string	true		"The Depid you want to delete"
+// @Success 200 {string} delete success!
+// @Failure 403 Depid is empty
+// @router /:Depid [delete]
+func (this *DepartmentDeleteController) Delete(){
+	o := orm.NewOrm()
+	Depid, _ := strconv.Atoi(this.Ctx.Input.Param(":Depid"))
+			DepartmentD := &models.Department{Depid:Depid}
+			
+			
+			if num, err := o.Delete(DepartmentD); err == nil {
+				fmt.Println(num)
+				fmt.Println(num)
+				this.Data["json"] = "Deleted"
+			}
+	
+		this.ServeJSON()
+
+}
+
+type DepartmentEditController struct{
+	beego.Controller
+}
+// @Title Update
+// @Description update the 
+// @Param	Bsid		path 	string	true		"The Depid you want to update"
+// @Param	body		body 	models.Department	true		"body for Department content"
+// @Success 200 {Depid} models.Department
+// @Failure 403 :Depid is not int
+// @router /:Depid [put]
+func (this *DepartmentEditController) Put(){
+	o := orm.NewOrm()
+	Depid,_ := strconv.Atoi(this.Ctx.Input.Param(":Depid"))
+	var nd models.Department
+
+	json.Unmarshal(this.Ctx.Input.RequestBody, &nd)
+
+	nn := models.Department{Depid: Depid}
+		if o.Read(&nn) == nil {
+	
+			nn.DepartmentName = nd.DepartmentName
+				if num, err := o.Update(&nn); err == nil {
+					fmt.Println(num)
+					this.Data["json"] = "Updated"
+				}
+		}
+	this.ServeJSON()	
 }
