# models/subjects.go
@@ -3,6 +3,9 @@ package models
 import (
 	"github.com/astaxie/beego/orm"
 	//"github.com/astaxie/beego"
+	"strings"
+	"errors"
+	"reflect"
 )
 
 
@@ -70,16 +73,80 @@ func AddingStudentSubjectChoice(sub *StudentSubjectChoices) (string, error){
 	return success, nil
 }
 
-/*
-func (subjectchoices StudentSubjectChoices) GetAllSubjectChoices() (ret []StudentSubjectChoices) {
+func GetAllSubjectChoices(query map[string]string, fields []string, sortby []string, order []string,
+	offset int64, limit int64) (ml []interface{}, err error) {
 	o := orm.NewOrm()
-	o.QueryTable("subjectchoices").RelatedSel().OrderBy("-Scid").All(&ret)
-	return
-}
-*/
+	qs := o.QueryTable(new(StudentSubjectChoices))
+	// query k=v
+	for k, v := range query {
+		// rewrite dot-notation to Object__Attribute
+		k = strings.Replace(k, ".", "__", -1)
+		if strings.Contains(k, "isnull") {
+			qs = qs.Filter(k, (v == "true" || v == "1"))
+		} else {
+			qs = qs.Filter(k, v)
+		}
+	}
+	// order by:
+	var sortFields []string
+	if len(sortby) != 0 {
+		if len(sortby) == len(order) {
+			// 1) for each sort field, there is an associated order
+			for i, v := range sortby {
+				orderby := ""
+				if order[i] == "desc" {
+					orderby = "-" + v
+				} else if order[i] == "asc" {
+					orderby = v
+				} else {
+					return nil, errors.New("Error: Invalid order. Must be either [asc|desc]")
+				}
+				sortFields = append(sortFields, orderby)
+			}
+			qs = qs.OrderBy(sortFields...)
+		} else if len(sortby) != len(order) && len(order) == 1 {
+			// 2) there is exactly one order, all the sorted fields will be sorted by this order
+			for _, v := range sortby {
+				orderby := ""
+				if order[0] == "desc" {
+					orderby = "-" + v
+				} else if order[0] == "asc" {
+					orderby = v
+				} else {
+					return nil, errors.New("Error: Invalid order. Must be either [asc|desc]")
+				}
+				sortFields = append(sortFields, orderby)
+			}
+		} else if len(sortby) != len(order) && len(order) != 1 {
+			return nil, errors.New("Error: 'sortby', 'order' sizes mismatch or 'order' size is not 1")
+		}
+	} else {
+		if len(order) != 0 {
+			return nil, errors.New("Error: unused 'order' fields")
+		}
+	}
 
-func (subjectchoices StudentSubjectChoices) GetAllSubjectChoices() (ret []StudentSubjectChoices){
-	o := orm.NewOrm()
-	o.QueryTable("student_subject_choices").RelatedSel().OrderBy("-Scid").All(&ret)
-	return
+	var l []StudentSubjectChoices
+	qs = qs.OrderBy(sortFields...)
+	if _, err = qs.Limit(limit, offset).RelatedSel().All(&l, fields...); err == nil {
+		if len(fields) == 0 {
+			for _, v := range l {
+				ml = append(ml, v)
+			}
+		} else {
+			// trim unused fields
+			for _, v := range l {
+				m := make(map[string]interface{})
+				val := reflect.ValueOf(v)
+				for _, fname := range fields {
+					m[fname] = val.FieldByName(fname).Interface()
+				}
+				ml = append(ml, m)
+			}
+		}
+		return ml, nil
+	}
+	return nil, err
 }
+
+
